// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gradePerformance golden snapshots (FR-025, SC-001) > grades accurate-eight-measures.json snapshot-identically, including every reason code 1`] = `
{
  "complete": true,
  "extras": [],
  "latency": {
    "inputLatencyMs": 0,
    "measuredAt": null,
    "outputLatencyMs": 0,
    "source": "assumed",
  },
  "measures": [
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 0,
      "passIndex": 0,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 1,
      "passIndex": 1,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 2,
      "passIndex": 2,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 3,
      "passIndex": 3,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 4,
      "passIndex": 4,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 5,
      "passIndex": 5,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 6,
      "passIndex": 6,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 1,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 7,
      "passIndex": 7,
      "unreliable": false,
    },
  ],
  "playedAlong": [],
  "reliability": [],
  "results": [
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 0,
      "noteIds": [
        "n-p0-s1-m0-v1-o0-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 1,
      "noteIds": [
        "n-p0-s1-m0-v1-o1-k62",
      ],
      "pitch": "correct",
      "playedKey": 62,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 62,
        "octaveDelta": null,
        "playedKey": 62,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 2,
      "noteIds": [
        "n-p0-s1-m0-v1-o2-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -2.8421709430404007e-13,
      "deltaTicks": -4.547473508864641e-13,
      "expectedIndex": 3,
      "noteIds": [
        "n-p0-s1-m0-v1-o3-k65",
      ],
      "pitch": "correct",
      "playedKey": 65,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -2.8421709430404007e-13,
        "expectedKey": 65,
        "octaveDelta": null,
        "playedKey": 65,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 4,
      "noteIds": [
        "n-p0-s1-m1-v1-o0-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 5,
      "noteIds": [
        "n-p0-s1-m1-v1-o1-k69",
      ],
      "pitch": "correct",
      "playedKey": 69,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 69,
        "octaveDelta": null,
        "playedKey": 69,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -5.684341886080801e-13,
      "deltaTicks": -9.094947017729282e-13,
      "expectedIndex": 6,
      "noteIds": [
        "n-p0-s1-m1-v1-o2-k71",
      ],
      "pitch": "correct",
      "playedKey": 71,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -5.684341886080801e-13,
        "expectedKey": 71,
        "octaveDelta": null,
        "playedKey": 71,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 7,
      "noteIds": [
        "n-p0-s1-m1-v1-o3-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 8,
      "noteIds": [
        "n-p0-s1-m2-v1-o0-k74",
      ],
      "pitch": "correct",
      "playedKey": 74,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 74,
        "octaveDelta": null,
        "playedKey": 74,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 9,
      "noteIds": [
        "n-p0-s1-m2-v1-o1-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 10,
      "noteIds": [
        "n-p0-s1-m2-v1-o2-k71",
      ],
      "pitch": "correct",
      "playedKey": 71,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 71,
        "octaveDelta": null,
        "playedKey": 71,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 11,
      "noteIds": [
        "n-p0-s1-m2-v1-o3-k69",
      ],
      "pitch": "correct",
      "playedKey": 69,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 69,
        "octaveDelta": null,
        "playedKey": 69,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -1.1368683772161603e-12,
      "deltaTicks": -1.8189894035458565e-12,
      "expectedIndex": 12,
      "noteIds": [
        "n-p0-s1-m3-v1-o0-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -1.1368683772161603e-12,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 13,
      "noteIds": [
        "n-p0-s1-m3-v1-o1-k65",
      ],
      "pitch": "correct",
      "playedKey": 65,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 65,
        "octaveDelta": null,
        "playedKey": 65,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 14,
      "noteIds": [
        "n-p0-s1-m3-v1-o2-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 15,
      "noteIds": [
        "n-p0-s1-m3-v1-o3-k62",
      ],
      "pitch": "correct",
      "playedKey": 62,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 62,
        "octaveDelta": null,
        "playedKey": 62,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 16,
      "noteIds": [
        "n-p0-s1-m4-v1-o0-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -1.1368683772161603e-12,
      "deltaTicks": -1.8189894035458565e-12,
      "expectedIndex": 17,
      "noteIds": [
        "n-p0-s1-m4-v1-o1-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -1.1368683772161603e-12,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 18,
      "noteIds": [
        "n-p0-s1-m4-v1-o2-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 19,
      "noteIds": [
        "n-p0-s1-m4-v1-o3-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 20,
      "noteIds": [
        "n-p0-s1-m5-v1-o0-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 21,
      "noteIds": [
        "n-p0-s1-m5-v1-o1-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 22,
      "noteIds": [
        "n-p0-s1-m5-v1-o2-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 23,
      "noteIds": [
        "n-p0-s1-m5-v1-o3-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -2.2737367544323206e-12,
      "deltaTicks": -3.637978807091713e-12,
      "expectedIndex": 24,
      "noteIds": [
        "n-p0-s1-m6-v1-o0-k62",
      ],
      "pitch": "correct",
      "playedKey": 62,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -2.2737367544323206e-12,
        "expectedKey": 62,
        "octaveDelta": null,
        "playedKey": 62,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 25,
      "noteIds": [
        "n-p0-s1-m6-v1-o1-k65",
      ],
      "pitch": "correct",
      "playedKey": 65,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 65,
        "octaveDelta": null,
        "playedKey": 65,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 26,
      "noteIds": [
        "n-p0-s1-m6-v1-o2-k69",
      ],
      "pitch": "correct",
      "playedKey": 69,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 69,
        "octaveDelta": null,
        "playedKey": 69,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 27,
      "noteIds": [
        "n-p0-s1-m6-v1-o3-k74",
      ],
      "pitch": "correct",
      "playedKey": 74,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 74,
        "octaveDelta": null,
        "playedKey": 74,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 28,
      "noteIds": [
        "n-p0-s1-m7-v1-o0-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
  ],
  "runId": "test-run",
  "settings": {
    "accompaniment": true,
    "countInMeasures": 1,
    "metronomeMuted": false,
    "range": null,
    "selection": {
      "partIndex": 0,
      "preset": "both",
      "staves": [
        1,
      ],
    },
    "strictness": "beginner",
    "tempoPercent": 100,
  },
  "summary": {
    "counts": {
      "correct": 29,
      "early": 0,
      "extra": 0,
      "late": 0,
      "missed": 0,
      "wrongPitch": 0,
    },
    "meanAsynchronyMs": -1.8621119971644005e-13,
    "notesCorrect": {
      "count": 29,
      "total": 29,
    },
    "notesOnTime": {
      "count": 29,
      "total": 29,
    },
    "timingNotResolvable": false,
  },
}
`;

exports[`gradePerformance golden snapshots (FR-025, SC-001) > grades mistakes-measures-3-and-7.json snapshot-identically, including every reason code 1`] = `
{
  "complete": true,
  "extras": [
    {
      "atTick": 25343.999999999996,
      "audioTimeSec": 15.839999999999998,
      "key": 55,
      "measureIndex": 6,
      "passIndex": 6,
      "reason": {
        "code": "extraNoNoteWritten",
        "deltaMs": null,
        "expectedKey": null,
        "octaveDelta": null,
        "playedKey": 55,
      },
    },
  ],
  "latency": {
    "inputLatencyMs": 0,
    "measuredAt": null,
    "outputLatencyMs": 0,
    "source": "assumed",
  },
  "measures": [
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 0,
      "passIndex": 0,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 1,
      "passIndex": 1,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 2,
        "early": 0,
        "extra": 0,
        "late": 1,
        "missed": 1,
        "wrongPitch": 1,
      },
      "measureIndex": 2,
      "passIndex": 2,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 3,
      "passIndex": 3,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 4,
      "passIndex": 4,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 4,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 5,
      "passIndex": 5,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 3,
        "early": 1,
        "extra": 1,
        "late": 0,
        "missed": 1,
        "wrongPitch": 0,
      },
      "measureIndex": 6,
      "passIndex": 6,
      "unreliable": false,
    },
    {
      "counts": {
        "correct": 1,
        "early": 0,
        "extra": 0,
        "late": 0,
        "missed": 0,
        "wrongPitch": 0,
      },
      "measureIndex": 7,
      "passIndex": 7,
      "unreliable": false,
    },
  ],
  "playedAlong": [],
  "reliability": [],
  "results": [
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 0,
      "noteIds": [
        "n-p0-s1-m0-v1-o0-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 1,
      "noteIds": [
        "n-p0-s1-m0-v1-o1-k62",
      ],
      "pitch": "correct",
      "playedKey": 62,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 62,
        "octaveDelta": null,
        "playedKey": 62,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 2,
      "noteIds": [
        "n-p0-s1-m0-v1-o2-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -2.8421709430404007e-13,
      "deltaTicks": -4.547473508864641e-13,
      "expectedIndex": 3,
      "noteIds": [
        "n-p0-s1-m0-v1-o3-k65",
      ],
      "pitch": "correct",
      "playedKey": 65,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -2.8421709430404007e-13,
        "expectedKey": 65,
        "octaveDelta": null,
        "playedKey": 65,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 4,
      "noteIds": [
        "n-p0-s1-m1-v1-o0-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 5,
      "noteIds": [
        "n-p0-s1-m1-v1-o1-k69",
      ],
      "pitch": "correct",
      "playedKey": 69,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 69,
        "octaveDelta": null,
        "playedKey": 69,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -5.684341886080801e-13,
      "deltaTicks": -9.094947017729282e-13,
      "expectedIndex": 6,
      "noteIds": [
        "n-p0-s1-m1-v1-o2-k71",
      ],
      "pitch": "correct",
      "playedKey": 71,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -5.684341886080801e-13,
        "expectedKey": 71,
        "octaveDelta": null,
        "playedKey": 71,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 7,
      "noteIds": [
        "n-p0-s1-m1-v1-o3-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 8,
      "noteIds": [
        "n-p0-s1-m2-v1-o0-k74",
      ],
      "pitch": "correct",
      "playedKey": 74,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 74,
        "octaveDelta": null,
        "playedKey": 74,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 150,
      "deltaTicks": 240,
      "expectedIndex": 9,
      "noteIds": [
        "n-p0-s1-m2-v1-o1-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "lateBy",
        "deltaMs": 150,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "late",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 10,
      "noteIds": [
        "n-p0-s1-m2-v1-o2-k71",
      ],
      "pitch": "wrongPitch",
      "playedKey": 83,
      "reason": {
        "code": "wrongOctaveHigh",
        "deltaMs": 0,
        "expectedKey": 71,
        "octaveDelta": 1,
        "playedKey": 83,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": null,
      "deltaTicks": null,
      "expectedIndex": 11,
      "noteIds": [
        "n-p0-s1-m2-v1-o3-k69",
      ],
      "pitch": "missed",
      "playedKey": null,
      "reason": {
        "code": "missedNothingPlayed",
        "deltaMs": null,
        "expectedKey": 69,
        "octaveDelta": null,
        "playedKey": null,
      },
      "timing": null,
    },
    {
      "deltaMs": -1.1368683772161603e-12,
      "deltaTicks": -1.8189894035458565e-12,
      "expectedIndex": 12,
      "noteIds": [
        "n-p0-s1-m3-v1-o0-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -1.1368683772161603e-12,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 13,
      "noteIds": [
        "n-p0-s1-m3-v1-o1-k65",
      ],
      "pitch": "correct",
      "playedKey": 65,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 65,
        "octaveDelta": null,
        "playedKey": 65,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 14,
      "noteIds": [
        "n-p0-s1-m3-v1-o2-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 15,
      "noteIds": [
        "n-p0-s1-m3-v1-o3-k62",
      ],
      "pitch": "correct",
      "playedKey": 62,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 62,
        "octaveDelta": null,
        "playedKey": 62,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 16,
      "noteIds": [
        "n-p0-s1-m4-v1-o0-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -1.1368683772161603e-12,
      "deltaTicks": -1.8189894035458565e-12,
      "expectedIndex": 17,
      "noteIds": [
        "n-p0-s1-m4-v1-o1-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -1.1368683772161603e-12,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 18,
      "noteIds": [
        "n-p0-s1-m4-v1-o2-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 19,
      "noteIds": [
        "n-p0-s1-m4-v1-o3-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 20,
      "noteIds": [
        "n-p0-s1-m5-v1-o0-k72",
      ],
      "pitch": "correct",
      "playedKey": 72,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 72,
        "octaveDelta": null,
        "playedKey": 72,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 21,
      "noteIds": [
        "n-p0-s1-m5-v1-o1-k67",
      ],
      "pitch": "correct",
      "playedKey": 67,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 67,
        "octaveDelta": null,
        "playedKey": 67,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 22,
      "noteIds": [
        "n-p0-s1-m5-v1-o2-k64",
      ],
      "pitch": "correct",
      "playedKey": 64,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 64,
        "octaveDelta": null,
        "playedKey": 64,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 23,
      "noteIds": [
        "n-p0-s1-m5-v1-o3-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -2.2737367544323206e-12,
      "deltaTicks": -3.637978807091713e-12,
      "expectedIndex": 24,
      "noteIds": [
        "n-p0-s1-m6-v1-o0-k62",
      ],
      "pitch": "correct",
      "playedKey": 62,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": -2.2737367544323206e-12,
        "expectedKey": 62,
        "octaveDelta": null,
        "playedKey": 62,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": -150,
      "deltaTicks": -240,
      "expectedIndex": 25,
      "noteIds": [
        "n-p0-s1-m6-v1-o1-k65",
      ],
      "pitch": "correct",
      "playedKey": 65,
      "reason": {
        "code": "earlyBy",
        "deltaMs": -150,
        "expectedKey": 65,
        "octaveDelta": null,
        "playedKey": 65,
      },
      "timing": "early",
    },
    {
      "deltaMs": null,
      "deltaTicks": null,
      "expectedIndex": 26,
      "noteIds": [
        "n-p0-s1-m6-v1-o2-k69",
      ],
      "pitch": "missed",
      "playedKey": null,
      "reason": {
        "code": "missedNothingPlayed",
        "deltaMs": null,
        "expectedKey": 69,
        "octaveDelta": null,
        "playedKey": null,
      },
      "timing": null,
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 27,
      "noteIds": [
        "n-p0-s1-m6-v1-o3-k74",
      ],
      "pitch": "correct",
      "playedKey": 74,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 74,
        "octaveDelta": null,
        "playedKey": 74,
      },
      "timing": "onTime",
    },
    {
      "deltaMs": 0,
      "deltaTicks": 0,
      "expectedIndex": 28,
      "noteIds": [
        "n-p0-s1-m7-v1-o0-k60",
      ],
      "pitch": "correct",
      "playedKey": 60,
      "reason": {
        "code": "correctOnTime",
        "deltaMs": 0,
        "expectedKey": 60,
        "octaveDelta": null,
        "playedKey": 60,
      },
      "timing": "onTime",
    },
  ],
  "runId": "test-run",
  "settings": {
    "accompaniment": true,
    "countInMeasures": 1,
    "metronomeMuted": false,
    "range": null,
    "selection": {
      "partIndex": 0,
      "preset": "both",
      "staves": [
        1,
      ],
    },
    "strictness": "beginner",
    "tempoPercent": 100,
  },
  "summary": {
    "counts": {
      "correct": 26,
      "early": 1,
      "extra": 1,
      "late": 1,
      "missed": 2,
      "wrongPitch": 1,
    },
    "meanAsynchronyMs": -2.0000462191765783e-13,
    "notesCorrect": {
      "count": 26,
      "total": 29,
    },
    "notesOnTime": {
      "count": 25,
      "total": 27,
    },
    "timingNotResolvable": false,
  },
}
`;
